# serializer version: 1
# name: test_delete_ta_group
  dict({
    'success': True,
  })
# ---
# name: test_delete_ta_watchlist
  dict({
    'success': True,
  })
# ---
# name: test_get_actor_timeline
  dict({
    'actor': 'APT41',
    'article_counts': list([
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ]),
    'dormancy_state': 'DORMANT',
    'last_active_month': None,
    'linked_campaigns': list([
    ]),
    'months': list([
      '2024-10',
      '2024-11',
      '2024-12',
      '2025-01',
      '2025-02',
      '2025-03',
      '2025-04',
      '2025-05',
      '2025-06',
      '2025-07',
      '2025-08',
      '2025-09',
      '2025-10',
      '2025-11',
      '2025-12',
      '2026-01',
      '2026-02',
      '2026-03',
      '2026-04',
      '2026-05',
      '2026-06',
      '2026-07',
      '2026-08',
      '2026-09',
    ]),
    'ransom_counts': list([
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ]),
    'state_transitions': list([
    ]),
    'total_counts': list([
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ]),
    'tweet_counts': list([
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ]),
  })
# ---
# name: test_get_ta_groups
  dict({
    'groups': list([
      dict({
        'added_date': str,
        'id': int,
        'name': 'APT41',
        'source': 'manual',
      }),
    ]),
    'page': 1,
    'page_size': 50,
    'total': 1,
  })
# ---
# name: test_get_ta_profile_endpoint_not_found
  dict({
    'exists': False,
    'profile': None,
  })
# ---
# name: test_get_ta_watchlist_empty
  dict({
    'items': list([
    ]),
    'page': 1,
    'page_size': 50,
    'total': 0,
  })
# ---
# name: test_get_ta_watchlist_names_empty
  dict({
    'names': list([
    ]),
  })
# ---
# name: test_get_whitelist_empty
  dict({
    'items': list([
    ]),
    'page': 1,
    'page_size': 50,
    'total': 0,
  })
# ---
# name: test_post_ta_group
  dict({
    'success': True,
  })
# ---
# name: test_post_ta_profile_generate
  dict({
    'profile': dict({
      '_actor_name': 'APT41',
      '_article_cves': list([
      ]),
      '_generated_at': str,
      'capability_assessment': dict({
        'sophistication_level': 'nation-state',
      }),
      'identity': dict({
        'actor_type': 'state-sponsored',
        'sponsoring_nation': 'China',
      }),
    }),
    'success': True,
  })
# ---
# name: test_post_ta_watchlist
  dict({
    'success': True,
  })
# ---
# name: test_restore_from_whitelist
  dict({
    'success': True,
  })
# ---
# name: test_ta_stats
  dict({
    'by_source': list([
      dict({
        'count': 1,
        'name': 'manual',
      }),
    ]),
    'in_news_count': 0,
    'manual_count': 1,
    'top_in_news': list([
    ]),
    'total_groups': 1,
    'total_whitelisted': 0,
  })
# ---
# name: test_watchlist_navigator_layer_empty
  dict({
    'description': 'TTPs aggregated from 0 watched threat actor profile(s). Score = actor coverage (darker = more actors use it).',
    'domain': 'enterprise-attack',
    'gradient': dict({
      'colors': list([
        '#ffe766',
        '#ff6666',
      ]),
      'maxValue': 100,
      'minValue': 0,
    }),
    'legendItems': list([
    ]),
    'metadata': list([
    ]),
    'name': 'Watchlist — TTP Coverage',
    'selectTechniquesAcrossTactics': True,
    'showTacticRowBackground': True,
    'tacticRowBackground': '#1a1a2e',
    'techniques': list([
    ]),
    'versions': dict({
      'attack': '14',
      'layer': '4.5',
      'navigator': '4.9',
    }),
  })
# ---
